overlays/development/route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-with-quarkus-kcd
  namespace: dev
  labels:
    app: code-with-quarkus-kcd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: v1.devops.local
    http:
      paths:
      - path: /v1
        pathType: Exact
        backend:
          service:
            name: code-with-quarkus-kcd
            port:
              number: 8080
